examples/syntax_errors/missing_colon.py
if spam == 42  # Error on this line: missing colon
    print('Hello!')
